--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Leader-Board</title>
     <!-- -- stylesheet -- -->
     <link rel="stylesheet" href="style.css">
+    <!-- Kit Font Awsome -->
+    <script src="https://kit.fontawesome.com/08c3a0e797.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -48,6 +50,123 @@
                     <div class="player ">
                         <img src="images/players/player-6.png " alt=" ">
                         <h3 class="player-name">Mujahid</h3>
+                    </div>
+                </div>
+            </div>
+            <!-- Horizental line -->
+            <hr>
+
+            <!-- Blog Proces -->
+
+            <div class="top-blogs">
+                <h2 class="text-layout">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <!-- Latest Courses -->
+
+        <section class="containe">
+            <h2 class="text-layout">Lates Course</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="desc-layout">React - The Complete</h3>
+                        <h3 class="desc-layout">Guide 2020</h3>
+                        <p class="author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                            </div>
+                            <span>4.5</span>
+                            <div class="course-duration"><i class="far fa-clock"></i>1:30hr</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="desc-layout">React - The Complete</h3>
+                        <h3 class="desc-layout">Guide 2020</h3>
+                        <p class="author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                            </div>
+                            <span>4.5</span>
+                            <div class="course-duration"><i class="far fa-clock"></i>1:30hr</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="desc-layout">React - The Complete</h3>
+                        <h3 class="desc-layout">Guide 2020</h3>
+                        <p class="author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                            </div>
+                            <span>4.5</span>
+                            <div class="course-duration"><i class="far fa-clock"></i>1:30hr</div>
+                        </div>
                     </div>
                 </div>
             </div>
