--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                             <img src="images/blogs/blog-2.png" alt="">
                         </div>
                         <div class="blog-info">
-                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
-                            <p class="author">By <a href="">Danny Sapio</a></p>
+                            <h3 class="blog-title">UI cheat sheet: list vs grids</h3>
+                            <p class="author">By <a href="">Tess Gadd</a></p>
                         </div>
                     </article>
                     <article class="blog">
@@ -84,8 +84,8 @@
                             <img src="images/blogs/blog-3.png" alt="">
                         </div>
                         <div class="blog-info">
-                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
-                            <p class="author">By <a href="">Danny Sapio</a></p>
+                            <h3 class="blog-title">7 typography tips for interface design</h3>
+                            <p class="author">By <a href="">Jeremiah Lam</a></p>
                         </div>
                     </article>
                     <article class="blog">
@@ -93,8 +93,8 @@
                             <img src="images/blogs/blog-4.png" alt="">
                         </div>
                         <div class="blog-info">
-                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
-                            <p class="author">By <a href="">Danny Sapio</a></p>
+                            <h3 class="blog-title">Your logo is copied</h3>
+                            <p class="author">By <a href="">Ferdinand Vogler</a></p>
                         </div>
                     </article>
                 </div>
@@ -132,9 +132,9 @@
                         <img src="images/courses/course-2.png" alt="">
                     </div>
                     <div class="course-details">
-                        <h3 class="desc-layout">React - The Complete</h3>
-                        <h3 class="desc-layout">Guide 2020</h3>
-                        <p class="author">Reed Krakoff.</p>
+                        <h3 class="desc-layout">Powerpoint 2020 </h3>
+                        <h3 class="desc-layout">Master Powerpoint Course</h3>
+                        <p class="author">Walter Scott.</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -144,7 +144,7 @@
                                 <i class="fas fa-star empty"></i>
                             </div>
                             <span>4.5</span>
-                            <div class="course-duration"><i class="far fa-clock"></i>1:30hr</div>
+                            <div class="course-duration"><i class="far fa-clock"></i>1:20hr</div>
                         </div>
                     </div>
                 </div>
@@ -153,9 +153,9 @@
                         <img src="images/courses/course-3.png" alt="">
                     </div>
                     <div class="course-details">
-                        <h3 class="desc-layout">React - The Complete</h3>
-                        <h3 class="desc-layout">Guide 2020</h3>
-                        <p class="author">Reed Krakoff.</p>
+                        <h3 class="desc-layout">The Complete JavaScript </h3>
+                        <h3 class="desc-layout">Course 2020</h3>
+                        <p class="author">Reed Krakoff..</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
